<resources>
    <string name="app_name">NavigationDrawerExercise</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="switch_text">Filter</string>

    <!-- Nav Drawer Menu Items -->
    <string name="south_park">South Park</string>
    <string name="family_guy">Family Guy</string>
    <string name="simpsons">The Simpsons</string>
    <string name="futurama">Futurama</string>
    <string name="cartoon_wars">Cartoon Wars</string>
    <string name="simpsorama">Simpsorama</string>
    <string name="downloaded_only">Downloaded only</string>
    <string name="downloaded">Downloaded</string>
    <string name="header">Animated Shows</string>
</resources>
